<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>
  
  <parent>
    <groupId>com.delose.java.lts</groupId>
    <artifactId>java-lts-features</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <groupId>com.delose</groupId>
  <artifactId>java8</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>java8</name>
  <url>http://maven.apache.org</url>

  <build>
    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
              <archive>
                <manifest>
                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    <mainClass>com.delose.lts.java8.App</mainClass> <!-- Specify your main class here -->
                </manifest>
              </archive>
          </configuration>
      </plugin>
      <!-- Code coverage & reporting -->
      <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.7</version>
          <executions>
              <execution>
                  <id>default-prepare-agent</id>
                  <goals>
                      <goal>prepare-agent</goal>
                  </goals>
              </execution>
              <execution>
                  <id>report</id>
                  <phase>prepare-package</phase>
                  <goals>
                      <goal>report</goal>
                  </goals>
                  <configuration>       
                    <excludes>
                      <exclude>com/delose/lts/java8/App*</exclude>
                    </excludes>
                  </configuration>
              </execution>
          </executions>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>9</source>
                <target>9</target>
            </configuration>
        </plugin>
    </plugins>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
  </build>
</project>
